2010-08-11  SAKAI Kiyotaka <kiyotaka.sakai@ntt-at.co.jp>

	* [w3m-dev 04381] Re: check socklen_t
	* ftp.c: fix condition (#ifndef HAVE_SOCKLEN_T)

2010-08-10  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04379] check socklen_t
	* configure.ac: check socklen_t
	* ftp.c (ftp_login, ftp_pasv): use socklen_t instead of int

2010-08-09  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04374] Re: "important" bugs from bugs.debian.org
	* table.c (feed_table_tag): don't show message when rowspan is greater than ATTR_ROWSPAN_MAX
	* [w3m-dev 04376] Re: "important" bugs from bugs.debian.org
	* table.c (feed_table_tag): fix indent

2010-08-08  Steven Harms <ZXB01226@nifty.com>

	* [w3m-dev 04371] Re: "important" bugs from bugs.debian.org
	* https://bugs.launchpad.net/ubuntu/+source/w3m/+bug/131993
	* table.c (ATTR_ROWSPAN_MAX): added
	(feed_table_tag): maximum value of rowspan is ATTR_ROWSPAN_MAX

2010-08-08  d+w3m@vdr.jp

	* [w3m-dev 04360] Re: "important" bugs from bugs.debian.org
	* main.c (main): use DEFAULT_COLS
	(main): the maximum value of the -cols option is MAXIMUM_COLS
	* backend.c (backend): use DEFAULT_COLS
	* fm.h (MAXIMUM_COLS, DEFAULT_COLS): added

2010-08-04  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04369] Re: w3m's bugs from bugs.debian.org
	* terms.c (graph_ok): fix condition (UseGraphicChar != GRAPHIC_CHAR_DEC)
	* symbol.c (get_symbol): fix condition (UseGraphicChar != GRAPHIC_CHAR_ASCII)
	* rc.c (params1): type of graphic_char option is PI_SEL_C
	* main.c (main): use GRAPHIC_CHAR_ASCII and GRAPHIC_CHAR_DEC instead of FALSE and TRUE
	* fm.h (GRAPHIC_CHAR_ASCII, GRAPHIC_CHAR_DEC, GRAPHIC_CHAR_CHARSET): added

2010-08-03  d+w3m@vdr.jp

	* [w3m-dev 04363] Re: w3m's bugs from bugs.debian.org
	* doc/w3m.1: revert option -S
	* doc-jp/w3m.1: revert option -S, -e, -j and -s
	* main.c: remove codes for Debian

2010-08-03  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04343]